--- a/src/css/tailwindcss.css
+++ b/src/css/tailwindcss.css
@@ -1,14 +1,14 @@
-@import "../../node_modules/tailwindcss/base.css";
+@import "tailwindcss/base.css";
 
 /* custom base styles
    ========================================================================== */
 
-@import "../../node_modules/tailwindcss/components.css";
+@import "tailwindcss/components.css";
 
 /* custom components styles
    ========================================================================== */
 
-@import "../../node_modules/tailwindcss/utilities.css";
+@import "tailwindcss/utilities.css";
 
 /* custom utilities styles
    ========================================================================== */
