--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1023,6 +1023,10 @@ video {
   background-color: #702459;
 }
 
+.bg-cyan-lite {
+  background-color: #00FFCC;
+}
+
 .hover\:bg-transparent:hover {
   background-color: transparent;
 }
@@ -1395,6 +1399,10 @@ video {
   background-color: #702459;
 }
 
+.hover\:bg-cyan-lite:hover {
+  background-color: #00FFCC;
+}
+
 .focus\:bg-transparent:focus {
   background-color: transparent;
 }
@@ -1765,6 +1773,10 @@ video {
 
 .focus\:bg-pink-900:focus {
   background-color: #702459;
+}
+
+.focus\:bg-cyan-lite:focus {
+  background-color: #00FFCC;
 }
 
 .bg-bottom {
@@ -2219,6 +2231,10 @@ video {
   border-color: #702459;
 }
 
+.border-cyan-lite {
+  border-color: #00FFCC;
+}
+
 .hover\:border-transparent:hover {
   border-color: transparent;
 }
@@ -2591,6 +2607,10 @@ video {
   border-color: #702459;
 }
 
+.hover\:border-cyan-lite:hover {
+  border-color: #00FFCC;
+}
+
 .focus\:border-transparent:focus {
   border-color: transparent;
 }
@@ -2961,6 +2981,10 @@ video {
 
 .focus\:border-pink-900:focus {
   border-color: #702459;
+}
+
+.focus\:border-cyan-lite:focus {
+  border-color: #00FFCC;
 }
 
 .rounded-none {
@@ -6391,6 +6415,10 @@ video {
   color: #702459;
 }
 
+.text-cyan-lite {
+  color: #00FFCC;
+}
+
 .hover\:text-transparent:hover {
   color: transparent;
 }
@@ -6763,6 +6791,10 @@ video {
   color: #702459;
 }
 
+.hover\:text-cyan-lite:hover {
+  color: #00FFCC;
+}
+
 .focus\:text-transparent:focus {
   color: transparent;
 }
@@ -7133,6 +7165,10 @@ video {
 
 .focus\:text-pink-900:focus {
   color: #702459;
+}
+
+.focus\:text-cyan-lite:focus {
+  color: #00FFCC;
 }
 
 .text-xs {
@@ -7982,6 +8018,10 @@ video {
     background-color: #702459;
   }
 
+  .sm\:bg-cyan-lite {
+    background-color: #00FFCC;
+  }
+
   .sm\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -8354,6 +8394,10 @@ video {
     background-color: #702459;
   }
 
+  .sm\:hover\:bg-cyan-lite:hover {
+    background-color: #00FFCC;
+  }
+
   .sm\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -8724,6 +8768,10 @@ video {
 
   .sm\:focus\:bg-pink-900:focus {
     background-color: #702459;
+  }
+
+  .sm\:focus\:bg-cyan-lite:focus {
+    background-color: #00FFCC;
   }
 
   .sm\:bg-bottom {
@@ -9178,6 +9226,10 @@ video {
     border-color: #702459;
   }
 
+  .sm\:border-cyan-lite {
+    border-color: #00FFCC;
+  }
+
   .sm\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -9550,6 +9602,10 @@ video {
     border-color: #702459;
   }
 
+  .sm\:hover\:border-cyan-lite:hover {
+    border-color: #00FFCC;
+  }
+
   .sm\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -9920,6 +9976,10 @@ video {
 
   .sm\:focus\:border-pink-900:focus {
     border-color: #702459;
+  }
+
+  .sm\:focus\:border-cyan-lite:focus {
+    border-color: #00FFCC;
   }
 
   .sm\:rounded-none {
@@ -13350,6 +13410,10 @@ video {
     color: #702459;
   }
 
+  .sm\:text-cyan-lite {
+    color: #00FFCC;
+  }
+
   .sm\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -13722,6 +13786,10 @@ video {
     color: #702459;
   }
 
+  .sm\:hover\:text-cyan-lite:hover {
+    color: #00FFCC;
+  }
+
   .sm\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -14092,6 +14160,10 @@ video {
 
   .sm\:focus\:text-pink-900:focus {
     color: #702459;
+  }
+
+  .sm\:focus\:text-cyan-lite:focus {
+    color: #00FFCC;
   }
 
   .sm\:text-xs {
@@ -14939,6 +15011,10 @@ video {
     background-color: #702459;
   }
 
+  .md\:bg-cyan-lite {
+    background-color: #00FFCC;
+  }
+
   .md\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -15311,6 +15387,10 @@ video {
     background-color: #702459;
   }
 
+  .md\:hover\:bg-cyan-lite:hover {
+    background-color: #00FFCC;
+  }
+
   .md\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -15681,6 +15761,10 @@ video {
 
   .md\:focus\:bg-pink-900:focus {
     background-color: #702459;
+  }
+
+  .md\:focus\:bg-cyan-lite:focus {
+    background-color: #00FFCC;
   }
 
   .md\:bg-bottom {
@@ -16135,6 +16219,10 @@ video {
     border-color: #702459;
   }
 
+  .md\:border-cyan-lite {
+    border-color: #00FFCC;
+  }
+
   .md\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -16507,6 +16595,10 @@ video {
     border-color: #702459;
   }
 
+  .md\:hover\:border-cyan-lite:hover {
+    border-color: #00FFCC;
+  }
+
   .md\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -16877,6 +16969,10 @@ video {
 
   .md\:focus\:border-pink-900:focus {
     border-color: #702459;
+  }
+
+  .md\:focus\:border-cyan-lite:focus {
+    border-color: #00FFCC;
   }
 
   .md\:rounded-none {
@@ -20307,6 +20403,10 @@ video {
     color: #702459;
   }
 
+  .md\:text-cyan-lite {
+    color: #00FFCC;
+  }
+
   .md\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -20679,6 +20779,10 @@ video {
     color: #702459;
   }
 
+  .md\:hover\:text-cyan-lite:hover {
+    color: #00FFCC;
+  }
+
   .md\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -21049,6 +21153,10 @@ video {
 
   .md\:focus\:text-pink-900:focus {
     color: #702459;
+  }
+
+  .md\:focus\:text-cyan-lite:focus {
+    color: #00FFCC;
   }
 
   .md\:text-xs {
@@ -21896,6 +22004,10 @@ video {
     background-color: #702459;
   }
 
+  .lg\:bg-cyan-lite {
+    background-color: #00FFCC;
+  }
+
   .lg\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -22268,6 +22380,10 @@ video {
     background-color: #702459;
   }
 
+  .lg\:hover\:bg-cyan-lite:hover {
+    background-color: #00FFCC;
+  }
+
   .lg\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -22638,6 +22754,10 @@ video {
 
   .lg\:focus\:bg-pink-900:focus {
     background-color: #702459;
+  }
+
+  .lg\:focus\:bg-cyan-lite:focus {
+    background-color: #00FFCC;
   }
 
   .lg\:bg-bottom {
@@ -23092,6 +23212,10 @@ video {
     border-color: #702459;
   }
 
+  .lg\:border-cyan-lite {
+    border-color: #00FFCC;
+  }
+
   .lg\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -23464,6 +23588,10 @@ video {
     border-color: #702459;
   }
 
+  .lg\:hover\:border-cyan-lite:hover {
+    border-color: #00FFCC;
+  }
+
   .lg\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -23834,6 +23962,10 @@ video {
 
   .lg\:focus\:border-pink-900:focus {
     border-color: #702459;
+  }
+
+  .lg\:focus\:border-cyan-lite:focus {
+    border-color: #00FFCC;
   }
 
   .lg\:rounded-none {
@@ -27264,6 +27396,10 @@ video {
     color: #702459;
   }
 
+  .lg\:text-cyan-lite {
+    color: #00FFCC;
+  }
+
   .lg\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -27636,6 +27772,10 @@ video {
     color: #702459;
   }
 
+  .lg\:hover\:text-cyan-lite:hover {
+    color: #00FFCC;
+  }
+
   .lg\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -28006,6 +28146,10 @@ video {
 
   .lg\:focus\:text-pink-900:focus {
     color: #702459;
+  }
+
+  .lg\:focus\:text-cyan-lite:focus {
+    color: #00FFCC;
   }
 
   .lg\:text-xs {
@@ -28853,6 +28997,10 @@ video {
     background-color: #702459;
   }
 
+  .xl\:bg-cyan-lite {
+    background-color: #00FFCC;
+  }
+
   .xl\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -29225,6 +29373,10 @@ video {
     background-color: #702459;
   }
 
+  .xl\:hover\:bg-cyan-lite:hover {
+    background-color: #00FFCC;
+  }
+
   .xl\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -29595,6 +29747,10 @@ video {
 
   .xl\:focus\:bg-pink-900:focus {
     background-color: #702459;
+  }
+
+  .xl\:focus\:bg-cyan-lite:focus {
+    background-color: #00FFCC;
   }
 
   .xl\:bg-bottom {
@@ -30049,6 +30205,10 @@ video {
     border-color: #702459;
   }
 
+  .xl\:border-cyan-lite {
+    border-color: #00FFCC;
+  }
+
   .xl\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -30421,6 +30581,10 @@ video {
     border-color: #702459;
   }
 
+  .xl\:hover\:border-cyan-lite:hover {
+    border-color: #00FFCC;
+  }
+
   .xl\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -30791,6 +30955,10 @@ video {
 
   .xl\:focus\:border-pink-900:focus {
     border-color: #702459;
+  }
+
+  .xl\:focus\:border-cyan-lite:focus {
+    border-color: #00FFCC;
   }
 
   .xl\:rounded-none {
@@ -34221,6 +34389,10 @@ video {
     color: #702459;
   }
 
+  .xl\:text-cyan-lite {
+    color: #00FFCC;
+  }
+
   .xl\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -34593,6 +34765,10 @@ video {
     color: #702459;
   }
 
+  .xl\:hover\:text-cyan-lite:hover {
+    color: #00FFCC;
+  }
+
   .xl\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -34963,6 +35139,10 @@ video {
 
   .xl\:focus\:text-pink-900:focus {
     color: #702459;
+  }
+
+  .xl\:focus\:text-cyan-lite:focus {
+    color: #00FFCC;
   }
 
   .xl\:text-xs {
