--- a/src/css/tailwindcss.css
+++ b/src/css/tailwindcss.css
@@ -1,14 +1,14 @@
 @import "tailwindcss/base.css";
-
 /* custom base styles
    ========================================================================== */
 
-@import "tailwindcss/components.css";
 
+@import "tailwindcss/components.css";
 /* custom components styles
    ========================================================================== */
+@import "custom-components.css";
+
 
 @import "tailwindcss/utilities.css";
-
 /* custom utilities styles
    ========================================================================== */
